--- a/UI/resources/viewFXML/history.fxml
+++ b/UI/resources/viewFXML/history.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TitledPane?>
@@ -8,28 +9,45 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<TitledPane expanded="true" text="History / Statistics" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HistoryController">
+<TitledPane expanded="true" text="History / Statistics" minHeight="150"
+            xmlns="http://javafx.com/javafx/21.0.8"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controllers.HistoryController">
 
     <content>
         <VBox spacing="8">
             <children>
+                <!-- השארתי את הסקרולר בדיוק כמו שביקשת -->
+                <ScrollPane fitToWidth="false" fitToHeight="true"
+                            hbarPolicy="AS_NEEDED" vbarPolicy="NEVER"
+                            VBox.vgrow="ALWAYS">
+                    <content>
+                        <VBox>
+                            <children>
+                                <TableView fx:id="historyTable"
+                                           minHeight="80"
+                                           prefWidth="600"
+                                           maxWidth="Infinity">
+                                    <columnResizePolicy>
+                                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                                    </columnResizePolicy>
+                                    <columns>
+                                        <TableColumn fx:id="colRunNumber"   prefWidth="120" text="Run Number"/>
+                                        <TableColumn fx:id="colProgramName" prefWidth="160" text="Program Name"/>
+                                        <TableColumn fx:id="colDegree"      prefWidth="100" text="Degree"/>
+                                        <TableColumn fx:id="colY"           prefWidth="100" text="Y"/>
+                                        <TableColumn fx:id="colCycles"      prefWidth="120" text="Cycles"/>
+                                    </columns>
+                                </TableView>
+                            </children>
+                        </VBox>
+                    </content>
+                </ScrollPane>
 
-                <TableView fx:id="historyTable" maxHeight="Infinity" prefHeight="260">
-                    <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                    </columnResizePolicy>
-                    <columns>
-                        <TableColumn fx:id="colRunNumber" prefWidth="120" text="Run Number" />
-                        <TableColumn fx:id="colProgramName" prefWidth="150" text="Program Name" />
-                        <TableColumn fx:id="colDegree" prefWidth="120" text="Degree" />
-                        <TableColumn fx:id="colY" prefWidth="80" text="Y" />
-                        <TableColumn fx:id="colCycles" prefWidth="90" text="Cycles" />
-                    </columns>
-                </TableView>
                 <ToolBar>
                     <items>
                         <Button fx:id="btnShowStatus" onAction="#onShowStatus" text="Show" disable="true"/>
-                        <Button fx:id="btnReRun" onAction="#onRerun" text="Re-run" disable="true" />
+                        <Button fx:id="btnReRun" onAction="#onRerun" text="Re-run" disable="true"/>
                         <Pane />
                     </items>
                 </ToolBar>
