--- a/UI/resources/viewFXML/root.fxml
+++ b/UI/resources/viewFXML/root.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
@@ -14,7 +15,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane stylesheets="@semulator.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RootController">
+<BorderPane stylesheets="@semulator.css" prefWidth="1100.0" prefHeight="700.0"
+            xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controllers.RootController">
 
   <top>
     <VBox spacing="8" BorderPane.alignment="CENTER_LEFT">
@@ -24,17 +27,17 @@
             <Button onAction="#onLoadFile" text="Load File" />
             <Separator orientation="VERTICAL" />
             <Label text="Currently Loaded:" />
-            <Label fx:id="lblFilePath" prefHeight="17.0" prefWidth="761.0" textOverrun="LEADING_ELLIPSIS" />
+            <Label fx:id="lblFilePath" textOverrun="LEADING_ELLIPSIS" />
             <Pane />
           </items>
         </ToolBar>
 
-        <Pane prefHeight="46.0" prefWidth="1616.0">
+        <HBox spacing="10" alignment="CENTER_LEFT" style="-fx-padding: 8;">
           <children>
-            <Button layoutX="14.0" layoutY="8.0" text="Program\Function selector" onAction="#onFunctionSelector"/>
-            <Separator layoutX="204.0" layoutY="3.0" orientation="VERTICAL" prefHeight="41.0" prefWidth="11.0" />
-            <Button fx:id="btnCollapse" layoutX="216.0" layoutY="7.0" onAction="#onCollapse" text="Collapse" />
-            <HBox layoutX="306.0" layoutY="6.0" spacing="6">
+            <Button text="Program\Function selector" onAction="#onFunctionSelector"/>
+            <Separator orientation="VERTICAL" prefHeight="30.0" />
+            <Button fx:id="btnCollapse" onAction="#onCollapse" text="Collapse" />
+            <HBox spacing="6" alignment="CENTER_LEFT">
               <children>
                 <Label alignment="CENTER" prefHeight="30.0" prefWidth="45.0" text="Degree:" />
                 <Spinner fx:id="spnDegree" editable="true">
@@ -42,35 +45,38 @@
                     <SpinnerValueFactory.IntegerSpinnerValueFactory initialValue="0" max="0" min="0" />
                   </valueFactory>
                 </Spinner>
-                <Label fx:id="lblMaxDegree" prefHeight="31.0" prefWidth="40.0" text="/ 0" />
+                <Label fx:id="lblMaxDegree" prefHeight="31.0" text="/ 0" />
               </children>
             </HBox>
-            <Button fx:id="btnExpand" layoutX="580.0" layoutY="7.0" onAction="#onExpand" text="Expand" />
-            <Separator layoutX="657.0" layoutY="1.0" orientation="VERTICAL" prefHeight="41.0" prefWidth="11.0" />
-            <Button fx:id="btnHighlightSelector" layoutX="679.0" layoutY="6.0" mnemonicParsing="false" onAction="#onHighLight" text="Vairable\Label Selector" />
+            <Button fx:id="btnExpand" onAction="#onExpand" text="Expand" />
+            <Separator orientation="VERTICAL" prefHeight="30.0" />
+            <Button fx:id="btnHighlightSelector" mnemonicParsing="false" onAction="#onHighLight" text="Vairable\Label Selector" />
+            <Pane HBox.hgrow="ALWAYS"/>
           </children>
-        </Pane>
+        </HBox>
 
       </children>
     </VBox>
   </top>
 
-  <!-- CENTER -->
+  <!-- CENTER with ScrollPane -->
   <center>
-    <!-- שמאלה: Instructions | ימינה: VBox עם Execution למעלה והיסטוריה מתחת, כמו בצילום -->
-    <SplitPane dividerPositions="0.62">
-      <items>
-        <fx:include fx:id="instructions" source="instructions.fxml" />
-
-        <!-- צד ימין עטוף ב-VBox: Execution נמתח, History מתחתיו -->
-        <VBox spacing="8">
-          <children>
-            <fx:include fx:id="execution" source="execution.fxml" VBox.vgrow="ALWAYS" />
-            <fx:include fx:id="history" source="history.fxml" />
-          </children>
-        </VBox>
-      </items>
-    </SplitPane>
+    <ScrollPane fitToWidth="true" fitToHeight="true"
+                hbarPolicy="AS_NEEDED" vbarPolicy="AS_NEEDED">
+      <content>
+        <SplitPane dividerPositions="0.62">
+          <items>
+            <fx:include fx:id="instructions" source="instructions.fxml" />
+            <VBox spacing="8">
+              <children>
+                <fx:include fx:id="execution" source="execution.fxml" />
+                <fx:include fx:id="history" source="history.fxml" VBox.vgrow="ALWAYS" />
+              </children>
+            </VBox>
+          </items>
+        </SplitPane>
+      </content>
+    </ScrollPane>
   </center>
 
   <!-- BOTTOM: Status bar + Progress -->
@@ -85,8 +91,6 @@
         <Pane HBox.hgrow="ALWAYS" />
         <Label fx:id="lblStatus" text="" />
         <ProgressBar fx:id="progressBar" prefWidth="220.0" progress="0.0" />
-        <!-- אופציונלי: כפתור ביטול -->
-        <!-- <Button fx:id="btnCancelLoad" text="Cancel" onAction="#onCancelLoad" /> -->
         <Separator orientation="VERTICAL" />
         <Label text="FPS:" />
         <Label fx:id="lblFps" text="0" />
