--- a/UI/resources/viewFXML/varsTable.fxml
+++ b/UI/resources/viewFXML/varsTable.fxml
@@ -7,7 +7,7 @@
 <VBox spacing="8" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.VarsTableController">
 
     <children>
-        <TableView fx:id="tblVars" prefWidth="335.0" VBox.vgrow="ALWAYS">
+        <TableView fx:id="tblVars" prefHeight="330.0" prefWidth="335.0" VBox.vgrow="ALWAYS">
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
